# safer-splat

./: .gitignore  README.md  REPRODUCIBILITY_MANIFEST.md  pyproject.toml
configs/: modal.json  modal700.json
nerfbridge/: cbf_utils.py  method_configs.py  pc2_utils.py  pose_utils.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_splatfacto.py  ros_trainer.py  ros_viewer.py  systems.py
reproduction/experiment_protocol_freeze_v1/: CROSS_DATASET_PREFREEZE_PROVENANCE_V1.md  EXPERIMENT_PROTOCOL_FROZEN_V1.md  METRICS_AND_FAILURE_TAXONOMY.md  PROTOCOL_FREEZE_IMPLEMENTATION_PLAN.md  README.md  REPORT_EXPERIMENT_PROTOCOL_FREEZE_V1.md  commit_lock.json  config_registry.yaml  cross_dataset_protocol_registry.yaml  dataset_registry.yaml  freeze_bundle_sha256.json  trial_set_registry.yaml  validation_result.json
scripts/: pcd_proc.py  view_vox.py
splat/: distances.py  gsplat_utils.py
work/risk_aware_cbf/: REPORT_ADAPTIVE_V1_BALANCED_FLIGHT20_OFFLINE_REPLAY.md  REPORT_ADAPTIVE_V1_BUDGETING_PILOT.md  REPORT_ADAPTIVE_V1_CLOSED_LOOP_SMOKE.md  REPORT_ADAPTIVE_V1_FLIGHT20_CLOSED_LOOP.md  REPORT_ADAPTIVE_V1_TARGETED_DT_RISK_CLOSED_LOOP.md  REPORT_CROSS_DATASET_METRIC_PREPROCESSING.md  REPORT_CROSS_DATASET_RAW_ACQUISITION.md  REPORT_DISCRETE_TIME_VERIFICATION_CONSOLIDATION.md  REPORT_FAS_CBF_NEXT_STAGE_SUMMARY.md  REPORT_FC_AWARE_HEADING_SHADOW_AUDIT.md  REPORT_FC_AWARE_V1_CAPPED_CLOSED_LOOP_SMOKE.md  REPORT_FC_AWARE_V1_EXACT_LOGGING_FEASIBILITY.md  REPORT_FC_AWARE_V1_EXACT_RECALL_AUDIT.md  REPORT_FC_AWARE_V1_FLIGHT20.md  REPORT_RISK_AWARE_V2_TRIAL57.md  (+38 more)
(+1141 files in other folders)
