[project]
name = "nerfbridge"
version = "1.1"

dependencies = [
	# "nerfstudio==1.1.4",
	"einops",
	"ftfy",
	"regex",
	"torchtyping",
]

[tool.setuptools.packages.find]
include = ["nerfbridge*"]

[tool.pyright]
extraPaths = ["nerfbridge"]

[project.entry-points.'nerfstudio.method_configs']
ros-nerfacto = 'nerfbridge.method_configs:RosNerfacto'
ros-depth-nerfacto = 'nerfbridge.method_configs:RosDepthNerfacto'
ros-splatfacto = 'nerfbridge.method_configs:RosSplatfacto'
ros-depth-splatfacto = 'nerfbridge.method_configs:RosDepthSplatfacto'
